fix: JSONWriter 의 코멘트 처리 NullPointerException 문제 해결. 남은 테스트 실페 8개

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
     testImplementation group: 'junit', name: 'junit', version: '4.+'
 
+    testImplementation 'org.json:json:20210307'
+
 
 
 
