--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,10 @@ java {
 dependencies {
     testImplementation group: 'org.json', name: 'json', version: '20240303'
 // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
-    testImplementation group: 'junit', name: 'junit', version: '4.+'
+    //testImplementation group: 'junit', name: 'junit', version: '4.+'
+    // junit 5
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+
 
     testImplementation 'org.json:json:20210307'
 
