--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,8 @@ java {
 
 dependencies {
     testImplementation group: 'org.json', name: 'json', version: '20220320'
-// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
     testImplementation group: 'junit', name: 'junit', version: '4.+'
-
+    testImplementation 'org.mockito:mockito-core:4.10.0'
 
 
 
